--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
+    id 'distribution'
     id 'org.openjfx.javafxplugin' version '0.0.12'
 }
 
@@ -30,6 +31,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'com.opencsv:opencsv:+'
+
 }
 
 application {
