Added Jackson library to build

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@
  * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
  * User Manual available at https://docs.gradle.org/7.3/userguide/building_java_projects.html
  */
-
+implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
