--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@
  * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
  * User Manual available at https://docs.gradle.org/7.3/userguide/building_java_projects.html
  */
-implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
+
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
@@ -31,7 +31,7 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'com.opencsv:opencsv:+'
-
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
 }
 
 application {
@@ -39,8 +39,22 @@ application {
     mainClass = 'ScheduleGnome.JavaFXApp'
 }
 
+jar {
+    manifest {
+        attributes 'Main-Class': 'ScheduleGnome.Launcher'
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+}
+
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
     // jvmArgs '--enable-preview'
 }
+
+tasks.withType(Jar) {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
