changed filter options

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,6 @@
 plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
-    id 'distribution'
     id 'org.openjfx.javafxplugin' version '0.0.12'
 }
 
@@ -55,6 +54,7 @@ tasks.named('test') {
 }
 
 tasks.withType(Jar) {
+    archiveFileName = "ScheduleGnome.jar"
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
