--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
     implementation 'com.opencsv:opencsv:+'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
+    implementation 'mysql:mysql-connector-java:8.0.28'
 }
 
 application {
