--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'com.opencsv:opencsv:+'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0'
     implementation 'mysql:mysql-connector-java:8.0.28'
+    implementation 'javax.persistence:javax.persistence-api:2.2'
 }
 
 application {
