--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ javafx {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:20.1.0'
+
     // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.7.2'
 
